Issue #2893510 by thejimbirch: Adds unique classes for the paragraphs in columns in the 2 and 3 uneven

--- a/less/bootstrap-paragraphs.less
+++ b/less/bootstrap-paragraphs.less
@@ -330,39 +330,39 @@
 
 /* Two Uneven Columns Paragraph. */
 /* .paragraph--bp-columns-two-uneven.html.twig */
-.paragraph--type--bp-columns-two-uneven {
+.paragraph.paragraph--type--bp-columns-two-uneven {
   &.paragraph--style--75-25 {
-    .paragraph--type--bp-columns__2col:nth-of-type(1) {
+    .paragraph--type--bp-columns-two-uneven__2col-column1 {
       .make-sm-column(9);
     }
-    .paragraph--type--bp-columns__2col:nth-of-type(2) {
+    .paragraph--type--bp-columns-two-uneven__2col-column2 {
       .make-sm-column(3);
     }
   }
 
   &.paragraph--style--66-33 {
-    .paragraph--type--bp-columns__2col:nth-of-type(1) {
+    .paragraph--type--bp-columns-two-uneven__2col-column1 {
       .make-sm-column(8);
     }
-    .paragraph--type--bp-columns__2col:nth-of-type(2) {
+    .paragraph--type--bp-columns-two-uneven__2col-column2 {
       .make-sm-column(4);
     }
   }
 
   &.paragraph--style--25-75 {
-    .paragraph--type--bp-columns__2col:nth-of-type(1) {
+    .paragraph--type--bp-columns-two-uneven__2col-column1 {
       .make-sm-column(3);
     }
-    .paragraph--type--bp-columns__2col:nth-of-type(2) {
+    .paragraph--type--bp-columns-two-uneven__2col-column2 {
       .make-sm-column(9);
     }
   }
 
   &.paragraph--style--33-66 {
-    .paragraph--type--bp-columns__2col:nth-of-type(1) {
+    .paragraph--type--bp-columns-two-uneven__2col-column1 {
       .make-sm-column(4);
     }
-    .paragraph--type--bp-columns__2col:nth-of-type(2) {
+    .paragraph--type--bp-columns-two-uneven__2col-column2 {
       .make-sm-column(8);
     }
   }
@@ -372,73 +372,61 @@
 /* .paragraph--bp-columns-three-uneven.html.twig */
 .paragraph--type--bp-columns-three-uneven {
   &.paragraph--style--25-50-25 {
-    .paragraph--type--bp-columns__3col:nth-of-type(1) {
+    .paragraph--type--bp-columns-three-uneven__3col-column1,
+    .paragraph--type--bp-columns-three-uneven__3col-column3 {
       .make-sm-column(3);
     }
-    .paragraph--type--bp-columns__3col:nth-of-type(2) {
+    .paragraph--type--bp-columns-three-uneven__3col-column2 {
       .make-sm-column(6);
-    }
-    .paragraph--type--bp-columns__3col:nth-of-type(3) {
-      .make-sm-column(3);
     }
   }
 
   &.paragraph--style--50-25-25 {
-    .paragraph--type--bp-columns__3col:nth-of-type(1) {
+    .paragraph--type--bp-columns-three-uneven__3col-column1 {
       .make-sm-column(6);
     }
-    .paragraph--type--bp-columns__3col:nth-of-type(2) {
-      .make-sm-column(3);
-    }
-    .paragraph--type--bp-columns__3col:nth-of-type(3) {
+    .paragraph--type--bp-columns-three-uneven__3col-column2,
+    .paragraph--type--bp-columns-three-uneven__3col-column3 {
       .make-sm-column(3);
     }
   }
 
   &.paragraph--style--25-25-50 {
-    .paragraph--type--bp-columns__3col:nth-of-type(1) {
+    .paragraph--type--bp-columns-three-uneven__3col-column1,
+    .paragraph--type--bp-columns-three-uneven__3col-column2 {
       .make-sm-column(3);
     }
-    .paragraph--type--bp-columns__3col:nth-of-type(2) {
-      .make-sm-column(3);
-    }
-    .paragraph--type--bp-columns__3col:nth-of-type(3) {
+    .paragraph--type--bp-columns-three-uneven__3col-column3 {
       .make-sm-column(6);
     }
   }
 
   &.paragraph--style--16-66-16 {
-    .paragraph--type--bp-columns__3col:nth-of-type(1) {
+    .paragraph--type--bp-columns-three-uneven__3col-column1,
+    .paragraph--type--bp-columns-three-uneven__3col-column3 {
       .make-sm-column(2);
     }
-    .paragraph--type--bp-columns__3col:nth-of-type(2) {
+    .paragraph--type--bp-columns-three-uneven__3col-column2 {
       .make-sm-column(8);
-    }
-    .paragraph--type--bp-columns__3col:nth-of-type(3) {
-      .make-sm-column(2);
     }
   }
 
   &.paragraph--style--66-16-16 {
-    .paragraph--type--bp-columns__3col:nth-of-type(1) {
+    .paragraph--type--bp-columns-three-uneven__3col-column1 {
       .make-sm-column(8);
     }
-    .paragraph--type--bp-columns__3col:nth-of-type(2) {
-      .make-sm-column(2);
-    }
-    .paragraph--type--bp-columns__3col:nth-of-type(3) {
+    .paragraph--type--bp-columns-three-uneven__3col-column2,
+    .paragraph--type--bp-columns-three-uneven__3col-column3 {
       .make-sm-column(2);
     }
   }
 
   &.paragraph--style--16-16-66 {
-    .paragraph--type--bp-columns__3col:nth-of-type(1) {
+    .paragraph--type--bp-columns-three-uneven__3col-column1,
+    .paragraph--type--bp-columns-three-uneven__3col-column2 {
       .make-sm-column(2);
     }
-    .paragraph--type--bp-columns__3col:nth-of-type(2) {
-      .make-sm-column(2);
-    }
-    .paragraph--type--bp-columns__3col:nth-of-type(3) {
+    .paragraph--type--bp-columns-three-uneven__3col-column3 {
       .make-sm-column(8);
     }
   }
